--- a/alchemy/templates/index.html
+++ b/alchemy/templates/index.html
@@ -34,6 +34,7 @@
             <div class="post-content">
               {{ article.content|striptags|truncate(256) }}
             </div>
+	    <button type="button" class="btn btn-default pull-right" href="/{{ article.url }}" title="Read More">Read More</button>
           </div>
         </div>
       </div>
